--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         width: 25px;
         height: 2px;
         border-radius: 100px;
-        background-color: var(--colorForground);
+        background-color: red;
         visibility: hidden;
         /*display: none;*/
       }
