--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
         width: 25px;
         height: 2px;
         border-radius: 100px;
-        background-color: red;
-        visibility: hidden;
+        background-color: var(--colorForground);
+        visibility: ;
         /*display: none;*/
       }
       .activity-main footer nav .nav-btn.active .active-bar {
