--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
               <div class="title-wrapper">
                 <span>Profile</span>
               </div>
-              <div class="active-bar"></div>
+              <div class="active-bar">h</div>
             </div>
           </div>
         </nav>
