--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           --colorDevider: rgba(255, 255, 255, 0.1);
         }
               .activity-main footer nav .nav-btn .active-bar {
-                background-color: red;
+                background-color: #fff;
               }
       }
     </style>
