--- a/index.html
+++ b/index.html
@@ -8,20 +8,46 @@
     <style type="text/css" media="all">
       @media only screen and (prefers-color-scheme: light) {
         :root {
-          --color: rgba(0, 0, 0, 1);
-          --colorIcon: rgba(0, 0, 0, 0.5);
-          --colorPrimary: rgba(30, 155, 240, 1);
-          --colorForground: rgba(0, 0, 0, 1);
-          --colorBackground: rgba(255, 255, 255, 1);
-          --colorDevider: rgba(0, 0, 0, 0.1);
+          --color: rgba(0,0,0,1);
+          --colorIcon: rgba(0,0,0,0.5);
+          --colorPrimary: rgba(30,155,240, 1);
+          --colorForground: rgba(0,0,0,1);
+          --colorBackground: rgba(255,255,255,1);
+          --colorDevider: rgba(0,0,0,0.1);
         }
       }
-      
+      @media only screen and (prefers-color-scheme: dark) {
+        :root {
+          --color: rgba(255,255,255,1);
+          --colorIcon: rgba(190,190,190,1);
+          --colorForground: rgba(255,255,255,1);
+          --colorBackground: rgba(42,45,54,1);
+          --colorDevider: rgba(255,255,255,0.1);
+        }
+      }
       body {
         margin: 0;
         padding: 0;
         font-family: Sans-Serif;
         background-color: var(--colorBackground);
+      }
+      /*Main Fragment*/
+      .activity-main > main {
+        width: 100%;
+        max-width: 600px;
+        margin: 0 auto;
+      }
+      .activity-main > main > .container {
+        width: 100%;
+        height: 100vh;
+        padding-bottom: 65px;
+        box-sizing: border-box;
+      }
+      .activity-main > main > .container > .fragment {
+        display: none;
+      }
+      .activity-main > main > .container > .fragment.active {
+        display: block;
       }
       /*Main Footer*/
       .activity-main footer {
@@ -92,29 +118,120 @@
         height: 2px;
         border-radius: 100px;
         background-color: var(--colorForground);
-        visibility: ;
+        visibility: hidden;
         /*display: none;*/
       }
       .activity-main footer nav .nav-btn.active .active-bar {
         visibility: visible;
       }
-      
-      @media only screen and (prefers-color-scheme: dark) {
-        :root {
-          --color: rgba(255, 255, 255, 1);
-          --colorIcon: rgba(190, 190, 190, 1);
-          --colorForground: rgba(255, 255, 255, 1);
-          --colorBackground: rgba(42, 45, 54, 1);
-          --colorDevider: rgba(255, 255, 255, 0.1);
-        }
-              .activity-main footer nav .nav-btn .active-bar {
-                background-color: #fff;
-              }
+      /*Fragment Home*/
+      .fragment-home {
+        width: 100%;
+        height: 100%;
+        overflow: scroll;
+        scroll-behavior: smooth;
+      }
+      .fragment-home header {
+        width: 100%;
+        height: 100px;
+        background-color: var(--colorBackground);
+        border-bottom: 1px solid var(--colorDevider);
+        position: sticky;
+        top: -50px;
+        user-select: none;
+      }
+      .fragment-home header > div {
+        width: 100%;
+        height: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      .fragment-home header > div div {
+        width: 35px;
+        height: 35px;
+        fill: var(--color);
+      }
+      .fragment-home header nav {
+        width: 100%;
+        height: 50px;
+        display: flex;
+      }
+      .fragment-home header nav .tab-btn {
+        flex: 1;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+      }
+      .fragment-home header nav .tab-btn span {
+        height: 100%;
+        display: flex;
+        align-items: center;
+        position: relative;
+        color: var(--color);
+        font-size: 14px;
+        font-weight: 420;
+      }
+      .fragment-home header nav .tab-btn.active span {
+        color: var(--color);
+      }
+      .fragment-home header nav .tab-btn.active span::after {
+        content: "";
+        width: 100%;
+        height: 4px;
+        border-radius: 100px;
+        background-color: var(--colorForground);
+        position: absolute;
+        bottom: 0;
+      }
+      .fragment-home main {
+        width: 100%;
+      }
+      .fragment-home main .container {
+        width: 100%;
+      }
+      .fragment-home main .container .fragment {
+        display: none;
+      }
+      .fragment-home main .container .fragment.active {
+        display: block;
       }
     </style>
   </head>
   <body>
     <div class="activity-main">
+      <main>
+        <div class="container">
+          <div class="fragment fragment-home">
+            <header>
+              <div class="">
+                <div class="">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                    <g><path d="M17.523 15.342a1 1 0 1 1-.001-1.999 1 1 0 0 1 .001 1.999m-11.046 0a1 1 0 1 1-.001-1.999 1 1 0 0 1 .001 1.999m11.404-6.02 1.997-3.459a.415.415 0 1 0-.72-.416L17.136 8.95C15.59 8.244 13.853 7.851 12 7.851s-3.59.393-5.137 1.098L4.841 5.447a.416.416 0 0 0-.72.415l1.997 3.46c-3.43 1.865-5.775 5.337-6.119 9.44h24c-.343-4.103-2.688-7.575-6.118-9.44"></path></g>
+                  </svg>
+                </div>
+              </div>
+              <nav>
+                <div class="tab-btn">
+                  <span>Collections</span>
+                </div>
+                <div class="tab-btn">
+                  <span>Expanses</span>
+                </div>
+              </nav>
+            </header>
+            <main>
+              <div class="container">
+                <div class="fragment"></div>
+                <div class="fragment"></div>
+              </div>
+            </main>
+          </div>
+          <div class="fragment">Search</div>
+          <div class="fragment">Broadcast</div>
+          <div class="fragment">Profile</div>
+        </div>
+      </main>
       <footer>
         <nav>
           <div class="nav-btn">
@@ -209,6 +326,169 @@
         </nav>
       </footer>
     </div>
-    <script type="text/javascript" charset="utf-8"></script>
+    <script type="text/javascript" charset="utf-8">
+      const FragmentManeger = {
+        main: {
+          getFragment: ["home", "search", "broadcast", "profile"],
+          activeFragment: "home"
+        },
+        home: {
+          getFragment: ["collection", "expanse"],
+          activeFragment: "collection"
+        }
+      };
+      window.addEventListener("DOMContentLoaded", () => {
+        const fragments = FragmentManeger.main.getFragment;
+        const fragmentManeger = JSON.parse(sessionStorage.getItem("fragmentManeger")) || FragmentManeger;
+        const activeFragment = fragmentManeger.main.activeFragment;
+        const index = fragmentManeger.main.getFragment.indexOf(activeFragment);
+        if (index === 0) {
+          location.replace(`#${fragments[index]}`);
+          if (!history.state) {
+            history.replaceState({ appStart: true }, "");
+          }
+        }
+        loadFragment(index, true);
+      });
+
+      let navBtn = document.querySelectorAll(".activity-main footer nav .nav-btn");
+      navBtn.forEach((btn, index) => {
+        btn.addEventListener("click", () => {
+          if (!btn.classList.contains("active")) {
+            const fragments = FragmentManeger.main.getFragment;
+            if (index === 0) {
+              onBackPressed();
+            }
+            if (navBtn[0].classList.contains("active")) {
+              history.pushState({ fragment: `${fragments[index]}` }, "", `#${fragments[index]}`);
+            } else {
+              history.replaceState({ fragment: `${fragments[index]}` }, "", `#${fragments[index]}`);
+            }
+            const fragmentManeger = JSON.parse(sessionStorage.getItem("fragmentManeger")) || FragmentManeger;
+            fragmentManeger.main.activeFragment = fragmentManeger.main.getFragment[index];
+            sessionStorage.setItem("fragmentManeger", JSON.stringify(fragmentManeger));
+            loadFragment(index, true);
+          } else {
+            loadFragment(index, false);
+          }
+        });
+      });
+
+      window.addEventListener("hashchange", () => {
+        const fragments = FragmentManeger.main.getFragment;
+        const path = location.hash.replace("#", "");
+        const index = fragments.indexOf(path);
+        if (index === 0) {
+          onBackPressed();
+        }
+        const fragmentManeger = JSON.parse(sessionStorage.getItem("fragmentManeger")) || FragmentManeger;
+        fragmentManeger.main.activeFragment = fragmentManeger.main.getFragment[index];
+        sessionStorage.setItem("fragmentManeger", JSON.stringify(fragmentManeger));
+        loadFragment(index, true);
+      });
+
+      function onBackPressed() {
+        const ref = document.referrer;
+        const safeToClear = ref === "" || ref.includes(location.hostname);
+        if (safeToClear) {
+          const goBackTill = () => {
+            if (history.state && history.state.appStart) {
+              return;
+            } else {
+              history.back();
+              setTimeout(goBackTill, 100);
+            }
+          };
+          goBackTill();
+        }
+      }
+
+      function loadFragment(index, isFirstTime) {
+        const fragments = document.querySelectorAll(".activity-main main .container .fragment");
+        fragments.forEach(fragment => {
+          fragment.classList.remove("active");
+        });
+        fragments[index].classList.add("active");
+        navBtn.forEach(btn => {
+          btn.classList.remove("active");
+        });
+        navBtn[index].classList.add("active");
+        switch (index) {
+          case 0:
+            const fragmentManeger = JSON.parse(sessionStorage.getItem("fragmentManeger")) || FragmentManeger;
+            const activeFragment = fragmentManeger.home.activeFragment;
+            let index = fragmentManeger.home.getFragment.indexOf(activeFragment);
+            if (!isFirstTime) {
+              index = 0;
+              fragmentManeger.home.activeFragment = fragmentManeger.home.getFragment[index];
+              sessionStorage.setItem("fragmentManeger", JSON.stringify(fragmentManeger));
+              sessionStorage.removeItem("fragmentCollectionScrollTop");
+              sessionStorage.removeItem("fragmentExpanseScrollTop");
+            }
+            renderHome(index);
+            break;
+        }
+      }
+
+      let tabBtn = document.querySelectorAll(".fragment-home header nav .tab-btn");
+      tabBtn.forEach((btn, index) => {
+        btn.addEventListener("click", () => {
+          if (!btn.classList.contains("active")) {
+            const fragmentManeger = JSON.parse(sessionStorage.getItem("fragmentManeger")) || FragmentManeger;
+            fragmentManeger.home.activeFragment = fragmentManeger.home.getFragment[index];
+            sessionStorage.setItem("fragmentManeger", JSON.stringify(fragmentManeger));
+            renderHome(index);
+          } else {
+            switch (index) {
+              case 0:
+                sessionStorage.removeItem("fragmentCollectionScrollTop");
+                break;
+              case 1:
+                sessionStorage.removeItem("fragmentExpanseScrollTop");
+                break;
+            }
+            renderHome(index);
+          }
+        });
+      });
+
+      let fragmentHome = document.querySelector(".activity-main main .container .fragment-home");
+      function renderHome(index) {
+        let fragments = document.querySelectorAll(".fragment-home main .container .fragment");
+        fragments.forEach(fragment => {
+          fragment.classList.remove("active");
+        });
+        fragments[index].classList.add("active");
+        tabBtn.forEach(btn => {
+          btn.classList.remove("active");
+        });
+        tabBtn[index].classList.add("active");
+        let scrollTop;
+        switch (index) {
+          case 0:
+            scrollTop = sessionStorage.getItem("fragmentCollectionScrollTop") || 0;
+            fragmentHome.scrollTop = scrollTop;
+            break;
+          case 1:
+            scrollTop = sessionStorage.getItem("fragmentExpanseScrollTop") || 0;
+            fragmentHome.scrollTop = scrollTop;
+            break;
+        }
+      }
+
+      fragmentHome.addEventListener("scroll", e => {
+        const fragmentManeger = JSON.parse(sessionStorage.getItem("fragmentManeger")) || FragmentManeger;
+        const activeFragment = fragmentManeger.home.activeFragment;
+        const index = fragmentManeger.home.getFragment.indexOf(activeFragment);
+        switch (index) {
+          case 0:
+            sessionStorage.setItem("fragmentCollectionScrollTop", e.target.scrollTop);
+            break;
+          case 1:
+            sessionStorage.setItem("fragmentExpanseScrollTop", e.target.scrollTop);
+            break;
+        }
+      });
+    </script>
   </body>
 </html>
