--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
     <style type="text/css" media="all">
       @media only screen and (prefers-color-scheme: light) {
         :root {
-          --color: rgba(0,0,0,1);
-          --colorIcon: rgba(0,0,0,0.5);
-          --colorPrimary: rgba(30,155,240, 1);
-          --colorForground: rgba(0,0,0,1);
-          --colorBackground: rgba(255,255,255,1);
-          --colorDevider: rgba(0,0,0,0.1);
+          --color: rgba(0, 0, 0, 1);
+          --colorIcon: rgba(0, 0, 0, 0.5);
+          --colorPrimary: rgba(30, 155, 240, 1);
+          --colorForground: rgba(0, 0, 0, 1);
+          --colorBackground: rgba(255, 255, 255, 1);
+          --colorDevider: rgba(0, 0, 0, 0.1);
         }
       }
       @media only screen and (prefers-color-scheme: dark) {
         :root {
-          --color: rgba(255,255,255,1);
-          --colorIcon: rgba(190,190,190,1);
-          --colorForground: rgba(255,255,255,1);
-          --colorBackground: rgba(42,45,54,1);
-          --colorDevider: rgba(255,255,255,0.1);
+          --color: rgba(255, 255, 255, 1);
+          --colorIcon: rgba(190, 190, 190, 1);
+          --colorForground: rgba(255, 255, 255, 1);
+          --colorBackground: rgba(42, 45, 54, 1);
+          --colorDevider: rgba(255, 255, 255, 0.1);
         }
       }
       body {
