--- a/index.html
+++ b/index.html
@@ -6,23 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
     <style type="text/css" media="all">
-      [data-theme="light"] {
-        --color: rgba(0, 0, 0, 1);
-        --colorIcon: rgba(0, 0, 0, 0.5);
-        --colorPrimary: rgba(30, 155, 240, 1);
-        --colorForground: rgba(0, 0, 0, 1);
-        --colorBackground: rgba(255, 255, 255, 1);
-        --colorDevider: rgba(0, 0, 0, 0.1);
+      @media only screen and (prefers-color-scheme: light) {
+        :root {
+          --color: rgba(0, 0, 0, 1);
+          --colorIcon: rgba(0, 0, 0, 0.5);
+          --colorPrimary: rgba(30, 155, 240, 1);
+          --colorForground: rgba(0, 0, 0, 1);
+          --colorBackground: rgba(255, 255, 255, 1);
+          --colorDevider: rgba(0, 0, 0, 0.1);
+        }
       }
-
-      [data-theme="dark"] {
+      @media only screen and (prefers-color-scheme: dark) {
+        :root {
           --color: rgba(255, 255, 255, 1);
           --colorIcon: rgba(190, 190, 190, 1);
           --colorForground: rgba(255, 255, 255, 1);
           --colorBackground: rgba(42, 45, 54, 1);
           --colorDevider: rgba(255, 255, 255, 0.1);
         }
-      
+      }
       body {
         margin: 0;
         padding: 0;
@@ -324,14 +326,6 @@
         </nav>
       </footer>
     </div>
-    <script>
-      function applyTheme() {
-        const isDark = window.matchMedia("(prefers-color-scheme: dark)").matches;
-        document.documentElement.setAttribute("data-theme", isDark ? "dark" : "light");
-      }
-      applyTheme();
-      window.matchMedia("(prefers-color-scheme: dark)").addEventListener("change", applyTheme);
-    </script>
     <script type="text/javascript" charset="utf-8">
       const FragmentManeger = {
         main: {
