--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta name="color-scheme" content="dark light"> 
     <title>Document</title>
     <style type="text/css" media="all">
-
+      @media only screen and (prefers-color-scheme: light) {
         :root {
           --color: rgba(0, 0, 0, 1);
           --colorIcon: rgba(0, 0, 0, 0.5);
@@ -16,7 +15,7 @@
           --colorBackground: rgba(255, 255, 255, 1);
           --colorDevider: rgba(0, 0, 0, 0.1);
         }
-      
+      }
       @media only screen and (prefers-color-scheme: dark) {
         :root {
           --color: rgba(255, 255, 255, 1);
@@ -490,7 +489,6 @@
             break;
         }
       });
-      alert()
     </script>
   </body>
 </html>
