--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
           }
         });
       } else {
-        window.location.href = "login.html"
+        window.location.href = "auth/login.html";
       }
       window.addEventListener("DOMContentLoaded", () => {
         const fragments = ["home", "search", "broadcast", "profile"];
