--- a/auth/login.html
+++ b/auth/login.html
@@ -9,6 +9,8 @@
     <style type="text/css" media="all"></style>
   </head>
   <body>
-    <script type="text/javascript" charset="utf-8"></script>
+    <script type="text/javascript" charset="utf-8">
+      window.location.href = "index.html"
+    </script>
   </body>
 </html>
