--- a/auth/login.html
+++ b/auth/login.html
@@ -9,6 +9,7 @@
     <style type="text/css" media="all"></style>
   </head>
   <body>
+    <h1>Login</h1>
     <script type="text/javascript" charset="utf-8">
       window.location.href = "index.html"
     </script>
