--- a/auth/login.html
+++ b/auth/login.html
@@ -11,7 +11,7 @@
   <body>
     <h1>Login</h1>
     <script type="text/javascript" charset="utf-8">
-      window.location.href = "index.html"
+      window.location.href = "../index.html"
     </script>
   </body>
 </html>
